February 15, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/psxhw.c: Don't skip calls to psxDman() when TR flag of CHCR is
   true, which fixes the menu problem in Dragon Quest 7.

February 14, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cdrom.c: Fixed GetlocP, which solves the problem with libcrypt
   copy protected games. (Thanks shalma)

February 13, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cdrom.c: Clear the 0x20 flag when stop reading, which fixes the
   problem with Syphon Filter.
 * libpcsxcore/psxhw.c: Always update HW_DMAx_CHCR in DmaExec(), which fixes
   the problem with Harvest Moon.
   (Thanks shalma: http://forums.ngemu.com/pcsx-discussion/116599-developers-wanted-pcsx-revival-2.html)

February 10, 2010 Tristin Celestin <cetris1@umbc.edu>

 * plugins/dfsound/pulseaudio.c: PulseAudio Normal API support is now working
   in threaded non-SPUasync() mode.

February 7, 2010 Tristin Celestin <cetris1@umbc.edu>

 * plugins/dfsound/pulseaudio.c: Added PulseAudio support (not working yet).
 * plugins/dfsound/pulseaudiosimple.c: Added PulseAudio Simple API support
   (not working with SPUasync).
 * plugins/dfsound/alsa.c: Fixed the alsa plugin so that it produces cleaner
   audio through PulseAudio.
 * plugins/dfsound/nullsnd.c: Don't compile when PulseAudio or PulseAudio
   Simple API support is enabled.
 * plugins/dfsound/spu.c: Added strings for PulseAudio plugin.
 * plugins/dfsound/Makefile.am: Added pulseaudio.c and pulseaudiosimple.c.
 * configure.ac: Added PulseAudio-related stuff.
 * po/zh_CN.po, po/zh_TW.po, po/pt_BR.po, po/pcsx.pot: Updated.

February 1, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/plugins/HIDInput/src/HID_Utilities.h: Removed duplicate file.
 * macosx/plugins/HIDInput/src/PlugPAD.c: #include HID_Utilities_External.h
   instead of HID_Utilities.h.
 * macosx/plugins/HIDInput/src/PadController.m: Likewise.
 * macosx/plugins/HIDInput/src/KeyConfig.h: Likewise.
